bug fixed swagger and router client
