# src/api/routes/clientRoutes.ts
@@ -5,6 +5,7 @@ import {
   getId,
   update,
   remove,
+  addPessoa,
 } from "../controllers/clientController";
 // import clientSchema from "../validations/clientSchema";
 
@@ -15,5 +16,7 @@ clientRoutes.get("/:id", getId);
 clientRoutes.get("/", getAll);
 clientRoutes.put("/update/:id", update);
 clientRoutes.delete("/delete/:id", remove);
+clientRoutes.post("/create", create);
+clientRoutes.post("/form/create/:id", addPessoa);
 
 export default clientRoutes;
